--- a/Front/Practice/2.CSS/1_p33 nth-child.html
+++ b/Front/Practice/2.CSS/1_p33 nth-child.html
@@ -23,7 +23,12 @@
         font-size: 1.5em;
         /* 글자크기 */
     }
-    
+    tr:first-child {
+        text-decoration: underline;
+        color: red;
+    }
+    tr:nth-child(2n) td:nth-child(2n) {background-color: pink;}
+    tr:nth-child(2n-1) td:nth-child(2n-1) {background-color: mediumspringgreen;}
 </style>
 
 <body>
